--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                             <div class="box valign-middle">
                                 <div class="content text-center">
                                     <div class="main-banner-content-two">
-                                        <h3 class="title" data-animation="animated fadeInUp">A premier Technology
-                                            conference of IEEE R10 in</h3>
+                                        <h3 class="title" data-animation="animated fadeInUp">The premier technology
+                                            conference of IEEE <br>Region 10 in</h3>
                                         <h1 data-animation="animated fadeInDown">God's own country</h1>
                                         <!-- <p data-animation="animated fadeInDown" class="text">We are one of leading
                                             company in manufacturing and <br> chemical products makes investments.</p>
@@ -387,18 +387,18 @@
 
                 <center>
                     <div class="container">
-                            <div class="row"><br><br>
+                            <div class="row">
                                 <div class="sec-title text-center">
                                     <h2>Organised By</h2></div>
-                                    <div class="col-md-4" style="padding-top:50px;">
+                                    <div class="col-md-4" style="padding-top:32px;">
                                         <img class="sponser-logo" src="images/logo-2.jpg" alt="Mathworks"
                                             style="height: 65px;">
                                     </div>
-                                    <div class="col-md-4" style="padding-top:50px;">
-                                        <img class="sponser-logo" src="images/logo-3.jpg" alt="IEEE SA"
-                                            style="height: 65px;">
+                                    <div class="col-md-4" style="padding-top:32px;">
+                                        <img class="sponser-logo" src="images/logo-3.png" alt="IEEE SA"
+                                            style="height: 75px;">
                                     </div>
-                                    <div class="col-md-4" style="padding-top:50px;">
+                                    <div class="col-md-4" style="padding-top:32px;">
                                         <img class="sponser-logo" src="images/logo-ieee.jpeg" alt="CDT" style="height: 80px;">
                                     </div>
                                 </div>
