added Google Analytics Tracking code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>TENCON 2019 | Home </title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-39379599-10');
+    </script>
+
     <!-- Stylesheets -->
 
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -244,9 +257,11 @@
                             <div class="box valign-middle">
                                 <div class="content text-center">
                                     <div class="main-banner-content-two">
-                                        <h3 class="title" data-animation="animated fadeInUp">17th - 20th October | Hotel Grand Hyatt Kochi</h3>
+                                        <h3 class="title" data-animation="animated fadeInUp">17th - 20th October | Hotel
+                                            Grand Hyatt Kochi</h3>
                                         <h1 data-animation="animated fadeInDown">TENCON 2019</h1>
-                                        <p class="text" data-animation="animated fadeInDown">Technology, Knowledge and Society</p>
+                                        <p class="text" data-animation="animated fadeInDown">Technology, Knowledge and
+                                            Society</p>
                                         <!-- <a href="#" data-animation="animated fadeInUp"
                                             class="theme-btn btn-style-one">Read More</a>
                                         <a href="#" data-animation="animated fadeInUp" class="link"><i
@@ -381,35 +396,37 @@
             </div>
         </section>
 
-    <!-- Contact Map Section -->
-    <section class="services-style-one">
-        <div class="container">
+        <!-- Contact Map Section -->
+        <section class="services-style-one">
+            <div class="container">
 
                 <center>
                     <div class="container">
-                            <div class="row">
-                                <div class="sec-title text-center">
-                                    <h2>Organised By</h2></div>
-                                    <div class="col-md-4" style="padding-top:32px;">
-                                        <img class="sponser-logo" src="images/logo-2.jpg" alt="Mathworks"
-                                            style="height: 65px;">
-                                    </div>
-                                    <div class="col-md-4" style="padding-top:32px;">
-                                        <img class="sponser-logo" src="images/logo-3.png" alt="IEEE SA"
-                                            style="height: 75px;">
-                                    </div>
-                                    <div class="col-md-4" style="padding-top:32px;">
-                                        <img class="sponser-logo" src="images/logo-ieee.jpeg" alt="CDT" style="height: 80px;">
-                                    </div>
-                                </div>
-                                <br>
+                        <div class="row">
+                            <div class="sec-title text-center">
+                                <h2>Organised By</h2>
+                            </div>
+                            <div class="col-md-4" style="padding-top:32px;">
+                                <img class="sponser-logo" src="images/logo-2.jpg" alt="Mathworks" style="height: 65px;">
+                            </div>
+                            <div class="col-md-4" style="padding-top:32px;">
+                                <img class="sponser-logo" src="images/logo-3.png" alt="IEEE SA" style="height: 75px;">
+                            </div>
+                            <div class="col-md-4" style="padding-top:32px;">
+                                <img class="sponser-logo" src="images/logo-ieee.jpeg" alt="CDT" style="height: 80px;">
+                            </div>
+                        </div>
                         <br>
-                        <br><div class="sec-title text-center">
-                                <h2>Sponsors & Exhibitors</h2><br></div>
+                        <br>
+                        <br>
+                        <div class="sec-title text-center">
+                            <h2>Sponsors & Exhibitors</h2><br>
+                        </div>
                         <div class="row">
                             <h3>TITLE SPONSOR</h3>
                             <div class="col">
-                                <img class="sponser-logo" src="./images/nissan.jpg" alt="nissan" style="max-width:250px;">
+                                <img class="sponser-logo" src="./images/nissan.jpg" alt="nissan"
+                                    style="max-width:250px;">
                             </div>
                         </div>
                         <br>
@@ -421,8 +438,7 @@
                                 <img class="sponser-logo" src="./images/nest.jpg" alt="nest" style="height: 125px;">
                             </div>
                             <div class="col-md-6 col-sm-6" style="padding-top: 25px;">
-                                <img class="sponser-logo" src="./images/KSITM.png" alt="KSITM"
-                                    style="height: 125px;">
+                                <img class="sponser-logo" src="./images/KSITM.png" alt="KSITM" style="height: 125px;">
                             </div>
                         </div>
                         <br>
@@ -437,13 +453,11 @@
                                 <img class="sponser-logo" src="./images/csl.jpg" alt="CSL" style="height: 80px;">
                             </div>
                             <div class="col-md-4" style="padding-top:35px;">
-                                <img class="sponser-logo" src="./images/oracle.png" alt="oracle"
-                                    style="height: 80px;">
+                                <img class="sponser-logo" src="./images/oracle.png" alt="oracle" style="height: 80px;">
                             </div>
 
                             <div class="col-md-4" style="padding-top:35px;">
-                                <img class="sponser-logo" src="./images/InApp.png" alt="InApp"
-                                    style="height: 80px;">
+                                <img class="sponser-logo" src="./images/InApp.png" alt="InApp" style="height: 80px;">
                             </div>
                             <div class="col-md-4" style="padding-top:35px;">
                                 <img class="sponser-logo" src="./images/IEEE.jpg" alt="IEEE" style="height: 80px;">
@@ -459,8 +473,7 @@
                         <div class="row">
                             <h3>BRONZE SPONSORS</h3>
                             <div class="col-md-3" style="padding-top:50px;">
-                                <img class="sponser-logo" src="./images/mentor.png" alt="mentor"
-                                    style="height: 40px;">
+                                <img class="sponser-logo" src="./images/mentor.png" alt="mentor" style="height: 40px;">
                             </div>
                             <div class="col-md-3" style="padding-top:50px;">
                                 <img class="sponser-logo" src="./images/ust.png" alt="ust" style="height: 50px;">
@@ -481,8 +494,7 @@
                                     style="height: 80px;">
                             </div>
                             <div class="col-md-3" style="padding-top:50px;">
-                                <img class="sponser-logo" src="./images/icfoss.png" alt="icfoss"
-                                    style="height: 50px;">
+                                <img class="sponser-logo" src="./images/icfoss.png" alt="icfoss" style="height: 50px;">
                             </div>
                             <div class="col-md-3" style="padding-top:50px;">
                                 <img class="sponser-logo" src="./images/KSUM-bronze.jpg" alt="KSUM"
@@ -519,9 +531,9 @@
                 <br>
 
             </div>
-        </div>
-</div>
-</section>
+    </div>
+    </div>
+    </section>
 
     <!-- Main Footer -->
     <footer class="main-footer padding-top">
