--- a/workshops.html
+++ b/workshops.html
@@ -2,7 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>TENCON 2019 | Workshops</title>
+<title>TENCON 2019 | Workshops</title><!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-39379599-10');
+</script>
+
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <!--
