--- a/committee.html
+++ b/committee.html
@@ -3,7 +3,16 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TENCON 2019 | Committee </title>
+    <title>TENCON 2019 | Committee </title><!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-39379599-10');
+</script>
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!--
