--- a/css/owl.video.play.html
+++ b/css/owl.video.play.html
@@ -8,7 +8,16 @@
 
 		<script type="text/javascript" src="//use.typekit.net/xlg5xfv.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-		<title>Page not found &#8211; Steelthemes</title>
+		<title>Page not found &#8211; Steelthemes</title><!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-39379599-10');
+</script>
+
 <meta name='robots' content='noindex,follow' />
 <script>document.documentElement.className = document.documentElement.className.replace("no-js","js");</script>
 <link rel='dns-prefetch' href='//s.w.org' />
