--- a/sponsors.html
+++ b/sponsors.html
@@ -4,6 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>TENCON 2019 | Sponsors and Exhibitors</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-39379599-10');
+    </script>
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!--
@@ -235,7 +248,8 @@
                             <div class="row">
                                 <h3>TITLE SPONSOR</h3>
                                 <div class="col">
-                                    <img class="sponser-logo" src="./images/nissan.jpg" alt="nissan" style="height: 215px;">
+                                    <img class="sponser-logo" src="./images/nissan.jpg" alt="nissan"
+                                        style="height: 215px;">
                                 </div>
                             </div>
                             <br>
