added Devcom link

--- a/nissan.html
+++ b/nissan.html
@@ -272,6 +272,7 @@ Lince, an ardent advocate (evangelist) of ERM and BCM practices, has over 19 yea
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
 					<i>Powered by</i>:
+<a class="expert-link" href="https://cecieee.org/devcom-walk-through/">Devcom CEC</a>&nbsp;&&nbsp;
                         <a href="http://www.rpsonline.com.sg" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
                     </div><!-- /.col-md-4 -->
 
