--- a/index-original.html
+++ b/index-original.html
@@ -606,6 +606,7 @@ TENCON 2019 at God’s Own Country is expected to bring together researchers, ed
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
 					<i>Powered by</i>:
+<a class="expert-link" href="https://cecieee.org/devcom-walk-through/">Devcom CEC</a>&nbsp;&&nbsp;
                         <a href="http://www.rpsonline.com.sg" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
                     </div><!-- /.col-md-4 -->
 
