--- a/kush.html
+++ b/kush.html
@@ -94,16 +94,16 @@
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
-<li><a href="workshops.html">Workshops</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
 <li><a href="tutorial.html">Tutorials</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
-<li class="dropdown"><a href="#">Tracks</a>
+<li class="dropdown"><a href="#">Special Tracks</a>
 <ul>
 <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
 <li><a href="htrack.html">Humanitarian Activities Track</a></li>
@@ -172,16 +172,16 @@
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
-<li><a href="workshops.html">Workshops</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
 <li><a href="tutorial.html">Tutorials</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
-<li class="dropdown"><a href="#">Tracks</a>
+<li class="dropdown"><a href="#">Special Tracks</a>
 <ul>
 <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
 <li><a href="htrack.html">Humanitarian Activities Track</a></li>
@@ -241,8 +241,8 @@ During this talk, I will share about our Singapore&#39;s technology-entrepreneur
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
 					<i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/">Devcom CEC</a>&nbsp;&&nbsp;
-                        <a href="http://www.rpsonline.com.sg" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
+<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
                     </div><!-- /.col-md-4 -->
 
                     <div class="col-md-4 col-sm-4 col-xs-12">
