--- a/overview.html
+++ b/overview.html
@@ -95,16 +95,16 @@
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
-<li><a href="workshops.html">Workshops</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
 <li><a href="tutorial.html">Tutorial</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
-<li class="dropdown"><a href="#">Tracks</a>
+<li class="dropdown"><a href="#">Special Tracks</a>
 <ul>
 <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
 <li><a href="htrack.html">Humanitarian Activities Track</a></li>
@@ -173,16 +173,16 @@
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
-<li><a href="workshops.html">Workshops</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
 <li><a href="tutorial.html">Tutorial</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
-<li class="dropdown"><a href="#">Tracks</a>
+<li class="dropdown"><a href="#">Special Tracks</a>
 <ul>
 <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
 <li><a href="htrack.html">Humanitarian Activities Track</a></li>
@@ -204,54 +204,45 @@
     <!--End Main Header -->
 
 
-<section class="project-single-section">
-        <div class="auto-container">
-            <div class="inner-container">
-                <!--Upper Box-->
-                <div class="upper-box">
-
-                </div>
-
-                <h2 class="title">Program Overview</h2>
-                <div class="row clearfix">
-                    <!--Content Box-->
-                    <div class="content-column col-lg-12 col-md-8 col-sm-12 col-xs-12">
-                        <div class="inner-column">
-                            <div class="text">
-                             will be update
-                    <!--Info Column-->
-
-                </div>
-
-
-
-
+    <section class="services-style-one" style="min-height:65vh;">
+        <div class="container">
+            <div class="sec-title text-left">
+                <h2>Program Overview</h2><br><br>
+                <img src="./images/technical-program-fa.jpg" /> <br>
+                <p style="text-align: center"><a href="Programme-Schedule-FA.pdf" class="theme-btn btn-style-one">Download Program Overview</a></p>
             </div>
         </div>
     </section>
-
 
     <!-- Main Footer -->
     <footer class="main-footer padding-top">
 
         <!--Footer Bottom-->
-         <div class="footer-bottom">
+        <!--Footer Bottom-->
+        <div class="footer-bottom">
             <div class="auto-container clearfix">
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
-					Powered By:
-                        <a href="#" class="expert-link">RPS Online</a>
+                        <i>Powered by</i>:
+<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
+                            style="font-weight: initial;">Research Publishing Services</a>
                     </div><!-- /.col-md-4 -->
+
                     <div class="col-md-4 col-sm-4 col-xs-12">
-                        <div class="copyright-text">&copy; TENCON 2019. All rights reserved. </div>
-                    </div><!-- /.col-md-4 -->
+
+                    </div>
+                    <!-- /.col-md-4 -->
+
+
+
                     <div class="col-md-4 col-sm-4 col-xs-12 text-right">
-                        <ul class="footer-menu">
-                            <li><a href="#">Privacy</a></li>
-                            <li><a href="#">Terms of Use</a></li>
-                            <li><a href="#">Site Map</a></li>
-                        </ul><!-- /.footer-menu -->
-                    </div><!-- /.col-md-4 -->
+                        <div class="copyright-text">&copy; 2019 TENCON 2019. All rights reserved. </div>
+                    </div>
+
+                    <!-- /.col-md-4 -->
+
+
                 </div><!-- /.row -->
             </div>
         </div>
