--- a/tutorial.html
+++ b/tutorial.html
@@ -95,15 +95,15 @@
                                         <ul>
                                             <li><a href="overview.html">Overview </a></li>
                                             <li><a href="detailed_program.html">Detailed Program</a></li>
-                                            <li><a href="special_sessions.html">Special Sessions</a></li>
-                                            <li><a href="workshops.html">Workshops</a></li>
+                                            <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+                                            <li><a href="inaugural-program.html">Inaugural Program</a></li>
                                             <li><a href="tutorial.html">Tutorials</a></li>
-                                            <li><a href="social.html">Social Program/Tour</a></li>
+                                            <!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
                                         </ul>
                                     </li>
-                                    <li><a href="special_sessions.html">Special Sessions</a></li>
-                                    <li class="dropdown"><a href="#">Tracks</a>
+                                    <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+                                    <li class="dropdown"><a href="#">Special Tracks</a>
                                         <ul>
                                             <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
                                             <li><a href="htrack.html">Humanitarian Activities Track</a></li>
@@ -146,7 +146,7 @@
 
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <!-- <li><a href="index.html">Home</a></li> -->
+                                    <li><a href="index.html">Home</a></li> <!--##-->
 
                                     <li class="dropdown"><a href="about.html">About</a>
                                         <ul>
@@ -174,16 +174,16 @@
                                         <ul>
                                             <li><a href="overview.html">Overview </a></li>
                                             <li><a href="detailed_program.html">Detailed Program</a></li>
-                                            <li><a href="special_sessions.html">Special Sessions</a></li>
-                                            <li><a href="workshops.html">Workshops</a></li>
+                                            <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+                                            <li><a href="inaugural-program.html">Inaugural Program</a></li>
                                             <li><a href="tutorial.html">Tutorials</a></li>
-                                            <li><a href="social.html">Social Program/Tour</a></li>
+                                            <!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
                                         </ul>
                                     </li>
-                                    <li><a href="special_sessions.html">Special Sessions</a></li>
+                                    <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
-                                    <li class="dropdown"><a href="#">Tracks</a>
+                                    <li class="dropdown"><a href="#">Special Tracks</a>
                                         <ul>
                                             <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
                                             <li><a href="htrack.html">Humanitarian Activities Track</a></li>
@@ -563,8 +563,8 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-4 col-xs-12 text-left">
                             <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/">Devcom CEC</a>&nbsp;&&nbsp;
-                            <a href="http://www.rpsonline.com.sg" class="expert-link"
+<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                            <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
                                 style="font-weight: initial;">Research Publishing Services</a>
                         </div><!-- /.col-md-4 -->
 
