--- a/images/index.html
+++ b/images/index.html
@@ -147,14 +147,14 @@ hr {
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="workshops.html">Workshops</a></li>
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
 <li><a href="tutorial.html">Tutorials</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
 <li><a href="itrack.html">Industry Track</a></li>
 <li><a href="reg.html">Registration</a></li>
@@ -223,14 +223,14 @@ hr {
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="workshops.html">Workshops</a></li>
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
 <li><a href="tutorial.html">Tutorials</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 <li><a href="about.html">Registration</a></li>
 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
@@ -699,8 +699,8 @@ Director, Leading academicians, Chief of many Government departments, public sec
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
 					<i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/">Devcom CEC</a>&nbsp;&&nbsp;
-                        <a href="http://www.rpsonline.com.sg" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
+<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
                     </div><!-- /.col-md-4 -->
 
                     <div class="col-md-4 col-sm-4 col-xs-12">
