--- a/index-original.html
+++ b/index-original.html
@@ -127,13 +127,13 @@
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="workshops.html">Workshops</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
 <li><a href="itrack.html">Industry Track</a></li>
 <li><a href="reg.html">Registration</a></li>
@@ -202,13 +202,13 @@
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="workshops.html">Workshops</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 <li><a href="about.html">Registration</a></li>
 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
@@ -606,8 +606,8 @@ TENCON 2019 at God’s Own Country is expected to bring together researchers, ed
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
 					<i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/">Devcom CEC</a>&nbsp;&&nbsp;
-                        <a href="http://www.rpsonline.com.sg" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
+<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
                     </div><!-- /.col-md-4 -->
 
                     <div class="col-md-4 col-sm-4 col-xs-12">
