--- a/itrack25-09.html
+++ b/itrack25-09.html
@@ -101,14 +101,14 @@ line-height: 195%;
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
-<li><a href="workshops.html">Workshops</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
 <li><a href="tutorial.html">Tutorials</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
 <li class="current dropdown"><a href="#">Tracks</a>
 <ul>
@@ -179,14 +179,14 @@ line-height: 195%;
 <ul>
 <li><a href="overview.html">Overview </a></li>
 <li><a href="detailed_program.html">Detailed Program</a></li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
-<li><a href="workshops.html">Workshops</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+<li><a href="inaugural-program.html">Inaugural Program</a></li>
 <li><a href="tutorial.html">Tutorials</a></li>
-<li><a href="social.html">Social Program/Tour</a></li>
+<!--<li><a href="social.html">Social Program/Tour</a></li>-->
 
 </ul>
 </li>
-<li><a href="special_sessions.html">Special Sessions</a></li>
+<!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 <li class="current dropdown"><a href="#">Tracks</a>
 <ul>
 <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
@@ -461,8 +461,8 @@ This one day registration is applicable only for attending participating in the 
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12 text-left">
 					<i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/">Devcom CEC</a>&nbsp;&&nbsp;
-                        <a href="http://www.rpsonline.com.sg" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
+<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
+                        <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link" style="font-weight: initial;">Research Publishing Services</a>
                     </div><!-- /.col-md-4 -->
 
                     <div class="col-md-4 col-sm-4 col-xs-12">
