--- a/htrack.html
+++ b/htrack.html
@@ -112,7 +112,7 @@
                    </li>
                    <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
-                   <li class="current dropdown"><a href="#">Tracks</a>
+                   <li class="current dropdown"><a href="#">Special Tracks</a>
                      <ul>
                        <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
                        <li><a href="htrack.html">Humanitarian Activities Track</a></li>
@@ -191,7 +191,7 @@
                    <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
 
 
-                   <li class="current dropdown"><a href="#">Tracks</a>
+                   <li class="current dropdown"><a href="#">Special Tracks</a>
                      <ul>
                        <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
                        <li><a href="htrack.html">Humanitarian Activities Track</a></li>
