--- a/index.html
+++ b/index.html
@@ -218,6 +218,12 @@
 
                                     </li>
                                     <!-- <li><a href="special_sessions.html">Special Sessions</a></li> -->
+                                    <li class="dropdown"><a href="#">Special Tracks</a>
+                                        <ul>
+                                            <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
+                                            <li><a href="htrack.html">Humanitarian Activities Track</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="about.html">Registration</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
