--- a/committee.html
+++ b/committee.html
@@ -202,7 +202,7 @@
 
                             <div class="navbar-collapse collapse clearfix">
                                 <ul class="navigation clearfix">
-                                    <!-- <li class="current"><a href="index.html">Home</a></li> -->
+                                    <li><a href="index.html">Home</a></li>
 
                                     <li class="dropdown"><a href="about.html">About</a>
                                         <ul>
@@ -246,7 +246,7 @@
                                             <li><a href="htrack.html">Humanitarian Activities Track</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="reg.html">Registration</a></li>
+                                    <li><a href="reg.html">Registration</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
                             </div>
