--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -221,16 +221,14 @@
                             <h2>Call for Papers</h2>
 
                             <p align="right">
-                                <font style="font-size:20px; color:red; font-weight:bold;">DOWNLOAD: <a
-                                        href="tencon2019-cfp.pdf" class="rp_a">Call for Papers in PDF </a><img
-                                        style="width:5%;" src="images/pdf.png" /></font>
+                                <font style="font-size:20px; color:#812767; font-weight:bold;"><a
+                                        href="tencon2019-cfp.pdf" class="url">DOWNLOAD: Call for Papers in PDF </a></font>
                             </p>
                         </div>
 
                         <p align="center">
                             <font size="4">SUBMISSION DEADLINE EXTENDED TO: 20-May-2019<br>
-                                <a class="url" href="special_sessions.html">SPECIAL SESSIONS PAPER SUBMISSION DEADLINE:
-                                    30-June -2019</a></font>
+                               SPECIAL SESSIONS PAPER SUBMISSION DEADLINE: 30-June -2019</font>
                         </p>
                         <br>
 
