--- a/reg.html
+++ b/reg.html
@@ -258,8 +258,7 @@
                                 href="TENCON19-Registration-Tutorial.pdf">Registration How-to-tutorial</a></font>
                     </p>
                     <p>The online registration system for TENCON 2019 is now available at the following link:</p><br>
-                    <p align="center"><a href="https://in.explara.com/widget-new/tencon-2019" target="_blank"><img
-                                src="images/reg_button.jpg" border="0"></a></p>
+                    <p align="center"><a class="theme-btn btn-style-one" href="https://in.explara.com/widget-new/tencon-2019" target="_blank">Proceed to: Registration System</a></p>
                     <br>
                     <p>
                         <table border="2" width="100%" cellspacing="2">
