--- a/inaugural-program.html
+++ b/inaugural-program.html
@@ -289,8 +289,8 @@
                                              <td>10:35 AM</td>
                                              <td>Inaugural Address<br>
 
-                                                 Shri. Arif Mohammad Khan<br>
-                                                 Hon. Governor of Kerala</td>
+                                                 - Shri. Arif Mohammad Khan<br>
+                                                 - Hon. Governor of Kerala</td>
                                          </tr>
                                          <tr>
                                              <td>10:55 AM</td>
