--- a/tutorial.html
+++ b/tutorial.html
@@ -258,15 +258,15 @@
                             <div class="tutorial-block-speakers row">
                                 <h4>Speakers</h4>
                                 <div class="col-md-4">
-                                    <p class="speaker-name">Dr. Rajat Subhra Chakraborty</p>
+                                    <p class="speaker-name"> Rajat Subhra Chakraborty</p>
                                     <p>Associate professor, CSE, IIT Kharaghpur</p>
                                 </div>
                                 <div class="col-md-4">
-                                    <p class="speaker-name">Dr. Jimson Mathew</p>
+                                    <p class="speaker-name"> Jimson Mathew</p>
                                     <p>Associate Professor & HoD CSE, IIT Patna</p>
                                 </div>
                                 <div class="col-md-4">
-                                    <p class="speaker-name">Mr. Pranesh Santikellu</p>
+                                    <p class="speaker-name"> Pranesh Santikellu</p>
                                     <p>Ph.D. Research Scholar, CSE, IIT Kharaghpur</p>
                                 </div>
                             </div>
@@ -324,11 +324,11 @@
                             <div class="tutorial-block-speakers row">
                                 <h4>Speakers</h4>
                                 <div class="col-md-4">
-                                    <p class="speaker-name">Dr. Sanajay Srivastava</p>
+                                    <p class="speaker-name"> Sanajay Srivastava</p>
                                     <p>DA-IICT, Gujrat</p>
                                 </div>
                                 <div class="col-md-4">
-                                    <p class="speaker-name">Dr. Manish Chaturvedi</p>
+                                    <p class="speaker-name"> Manish Chaturvedi</p>
                                     <p>Assistant Professor, Pandit Deendayal Petroleum University</p>
                                 </div>
                             </div>
@@ -396,8 +396,12 @@
                             <div class="tutorial-block-speakers row">
                                 <h4>Speakers</h4>
                                 <div class="col-md-4">
-                                    <p class="speaker-name">Dr. Ashu Sharma</p>
-                                    <p>Mindtree and Hemant Rathore, CS, BITS Pilani</p>
+                                    <p class="speaker-name">Ashu Sharma</p>
+                                    <p>Mindtree</p>
+                                </div>
+                                <div class="col-md-4">
+                                    <p class="speaker-name">Hemant Rathore</p>
+                                    <p>CS, BITS Pilani</p>
                                 </div>
                             </div>
                         </div>
@@ -535,8 +539,11 @@
                                 <h4>Speakers</h4>
                                 <div class="col-md-4">
                                     <p class="speaker-name">Visweswaran J</p>
-                                    <p>Territory Manager, Academic Programs (South), National Instruments Bangalore
-                                        Nilutpal Choudhury, CEO, AvGarde Systems Bangalore</p>
+                                    <p>Territory Manager, Academic Programs (South), National Instruments Bangalore</p>
+                                </div>
+                                <div class="col-md-4">
+                                    <p class="speaker-name">Nilutpal Choudhury</p>
+                                    <p>CEO, AvGarde Systems Bangalore</p>
                                 </div>
                             </div>
                         </div>
