--- a/itrack.html
+++ b/itrack.html
@@ -4,14 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>TENCON 2019 | Industry Track </title><!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39379599-10"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-39379599-10');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-39379599-10');
+  </script>
 
   <!-- Stylesheets -->
   <link href="css/bootstrap.css" rel="stylesheet">
@@ -27,6 +30,21 @@
       text-align: justify;
       font-size: 15px;
       line-height: 195%;
+    }
+
+    .itrack .why-us-tabs .tab-btn.active-btn {
+      color: #822468;
+      padding-right: 55px;
+      background: #deded9;
+      border-radius: 3px;
+    }
+
+    .itrack .why-us-tabs .tab-btn:before {
+      color: #822468
+    }
+
+    .itrack .why-us-tabs .tabs-content ul li:before {
+      color: #248246;
     }
   </style>
 
@@ -154,7 +172,8 @@
 
               <div class="navbar-collapse collapse clearfix">
                 <ul class="navigation clearfix">
-                  <li><a href="index.html">Home</a></li> <!--##-->
+                  <li><a href="index.html">Home</a></li>
+                  <!--##-->
                   <li class="dropdown"><a href="about.html">About</a>
                     <ul>
                       <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -212,7 +231,7 @@
     <!--End Main Header -->
 
 
-    <section class="services-style-one">
+    <section class="services-style-one itrack">
       <div class="container">
         <div class="sec-title text-left">
 
@@ -660,8 +679,10 @@
           <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-12 text-left">
               <i>Powered by</i>:
-<a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom CEC</a>&nbsp;&&nbsp;
-              <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link" style="font-weight: initial;">Research
+              <a class="expert-link" href="https://cecieee.org/devcom-walk-through/" target="_blank">Devcom
+                CEC</a>&nbsp;&&nbsp;
+              <a href="http://www.rpsonline.com.sg" target="_blank" class="expert-link"
+                style="font-weight: initial;">Research
                 Publishing Services</a>
             </div><!-- /.col-md-4 -->
 
